--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zaid-mir.github.io/TextUtils-React",
+  "homepage": "https://zaid-mir.github.io/text-utils",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
